--- a/src/app/pages/tabs/member/member.page.html
+++ b/src/app/pages/tabs/member/member.page.html
@@ -16,12 +16,12 @@
         <ion-item>
           <ion-label position="stacked">用户名 <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-input type="text" formControlName="username" value="it_test" placeholder="请输入用户名或者手机号码"></ion-input>
+          <ion-input type="text" formControlName="username"  placeholder="请输入用户名或者手机号码"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stacked">密码 <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-input type="text" formControlName="password" value="1234abcd" placeholder="请输入密码 区分大小写"></ion-input>
+          <ion-input type="password" formControlName="password"  placeholder="请输入密码 区分大小写"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>记住我</ion-label>
