--- a/src/app/pages/member/wechat-pay-description/wechat-pay-description.page.html
+++ b/src/app/pages/member/wechat-pay-description/wechat-pay-description.page.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar>
       <ion-buttons slot="start">
-          <ion-button (click)="goBack()">
-            <ion-icon name="arrow-back"></ion-icon>
-          </ion-button>
+          <ion-back-button></ion-back-button>
         </ion-buttons>
     <ion-title>支付说明</ion-title>
     
