--- a/src/app/pages/member/wechat-pay/wechat-pay.page.html
+++ b/src/app/pages/member/wechat-pay/wechat-pay.page.html
@@ -1,10 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button (click)="goBack()">
-        <ion-icon name="arrow-back"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+      <ion-buttons slot="start">
+          <ion-back-button></ion-back-button>
+        </ion-buttons>
     <ion-title>微信支付</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="payHistory()">
