--- a/src/app/pages/member/problem-list/problem-list.page.scss
+++ b/src/app/pages/member/problem-list/problem-list.page.scss
@@ -1,10 +1,14 @@
-.bg{
-    background-color: #f7f7f7;
+
+
+ion-content{
+    --background: #f7f7f7;
 }
 ion-list{
     margin-bottom: 1rem;
 }
+ion-toolbar{
+    --background: white;
+}
 .bottom-border{
     border-bottom: 1px solid #c8c7cc;
-  
 }
