聊天功能完善

--- a/src/app/pages/member/delivery-record-detail/delivery-record-detail.page.html
+++ b/src/app/pages/member/delivery-record-detail/delivery-record-detail.page.html
@@ -150,8 +150,6 @@
     </div>
   </div>
 </ion-content>
-<!-- <ion-footer>
-  <ion-toolbar>
-    <button ion-button full (click)="chat()">联系客服</button>
-  </ion-toolbar>
-</ion-footer> -->
+<ion-footer>
+  <ion-button expand="full"  (click)="chat()">联系客服</ion-button>
+</ion-footer>
