--- a/src/app/pages/member/problem-detail/problem-detail.page.html
+++ b/src/app/pages/member/problem-detail/problem-detail.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+      <ion-buttons slot="start">
+          <ion-back-button></ion-back-button>
+        </ion-buttons>
     <ion-title>问题详情</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -20,3 +23,6 @@
         </ion-item>
       </ion-list>
 </ion-content>
+<ion-footer>
+  <ion-button expand="full"  (click)="chat()">联系客服</ion-button>
+</ion-footer>
