找回密码功能移植

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     
     <ion-buttons slot="end">
-      <ion-button>
+      <ion-button (click)="forgetPasswordClick()">
         忘记密码？
       </ion-button>
     </ion-buttons>
