--- a/src/app/pages/tabs/member/member.page.html
+++ b/src/app/pages/tabs/member/member.page.html
@@ -79,8 +79,8 @@
         <ion-row class="ion-align-items-center">
           <ion-col col-4>
             <div class="ion-text-center">
-              <div class="title">{{userInfo?.Amount}}</div>
-              欠款金额(元)
+              <div class="title">{{userInfo?.Amount|currency:'CNY'}}</div>
+              欠款金额
             </div>
           </ion-col>
           <ion-col col-4>
