报价计算添加货物属性选项

--- a/src/app/pages/member/calculation/calculation.page.html
+++ b/src/app/pages/member/calculation/calculation.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content class="ion-padding-top">
-  <ion-segment [(ngModel)]="calculateMode">
+  <ion-segment [(ngModel)]="calculateMode" (ionChange)="segmentChanged($event)">
     <ion-segment-button value="1">
       <ion-label>精简模式</ion-label>
     </ion-segment-button>
@@ -41,6 +41,10 @@
 
             </ion-list>
           </ion-item>
+          <ion-item *ngFor="let item of priceRuleTemplateInfoList">
+            <ion-label>{{item.Name}}</ion-label>
+            <ion-checkbox (ionChange)="ruleChanged(item,$event)" slot="start"></ion-checkbox>
+          </ion-item>
           <ion-item>
             <ion-label>重量</ion-label>
             <ion-input type="number" formControlName="actualWeight"></ion-input>
@@ -67,6 +71,7 @@
               <ion-select-option value="0">文件</ion-select-option>
             </ion-select>
           </ion-item>
+         
           <ion-item>
             <ion-label>国家</ion-label>
             <ion-input type="text" formControlName="countryId" (ionBlur)="onCountryBlur()"
@@ -103,7 +108,10 @@
               </ion-select-option>
             </ion-select>
           </ion-item>
-
+          <ion-item *ngFor="let item of priceRuleTemplateInfoList">
+            <ion-label>{{item.Name}}</ion-label>
+            <ion-checkbox (ionChange)="ruleChanged(item,$event)" slot="start"></ion-checkbox>
+          </ion-item>
           <ion-button expand="block" type="submit" [disabled]="!myForm.valid">计算</ion-button>
         </ion-list>
       </form>
