未读消息改进

--- a/src/app/pages/member/delivery-record-detail/delivery-record-detail.page.html
+++ b/src/app/pages/member/delivery-record-detail/delivery-record-detail.page.html
@@ -66,6 +66,10 @@
           <ion-note slot="end">{{data?.ProductType}}</ion-note>
         </ion-item>
         <ion-item>
+          <ion-label>货物属性</ion-label>
+          <ion-note slot="end">{{data?.AttributeNames}}</ion-note>
+        </ion-item>
+        <ion-item>
           <ion-label>操作员</ion-label>
           <ion-note slot="end">{{data?.OperationName}}</ion-note>
         </ion-item>
