--- a/src/app/pages/tabs/member/member.page.scss
+++ b/src/app/pages/tabs/member/member.page.scss
@@ -77,3 +77,20 @@ ion-img{
     padding-right: 0 !important;
     padding-left: 0 !important;
 }
+.my-badge{
+    position: absolute;
+    right:0;
+    top: 0;
+    background-color: red;
+    width: 20px;
+    height: 20px;
+    vertical-align: center;
+    text-align: center;
+    border-radius:50%;
+    color: white;
+}
+.my-badge1{
+    width:30px;
+    height:30px; 
+    margin-right: 12px;
+}
