--- a/src/app/pages/member/unread-message-list1/unread-message-list1.page.html
+++ b/src/app/pages/member/unread-message-list1/unread-message-list1.page.html
@@ -13,10 +13,10 @@
   <ion-list lines="none" *ngFor="let item of items" (click)="detail(item)">
     <ion-item>
       <ion-label>{{ item.ObjectNo }}</ion-label>
-      <ion-note slot="end">2020-05-18</ion-note>
+      <ion-note slot="end">{{ item.Time }}</ion-note>
     </ion-item>
     <ion-item>
-      <ion-label>你好，这票件什么时候能提取？都特么一个多月了，你们都干什么吃的</ion-label>
+      <ion-label>{{ item.Content }}</ion-label>
       <ion-badge slot="end" color="danger">{{item.Count}}</ion-badge>
     </ion-item>
   </ion-list>
