--- a/src/app/pages/member/unread-message-list1/unread-message-list1.page.scss
+++ b/src/app/pages/member/unread-message-list1/unread-message-list1.page.scss
@@ -5,17 +5,12 @@ ion-list{
     border-radius: 10px;
     padding-top: 0;
     padding-bottom: 0;
+    margin-bottom: 15px;
 }
 ion-label{
     margin-bottom: 0;
     margin-top: 0;
 }
 ion-item{
-    --min-height:25px;
-}
-.item-native{
-    height: 13px !important;
-}
-ion-note{
-    height: 13px !important;
+    --min-height:30px;
 }
