修复聊天界面显示0,1的bug

--- a/src/app/pages/member/chat/chat.page.scss
+++ b/src/app/pages/member/chat/chat.page.scss
@@ -4,6 +4,9 @@ ion-footer {
     --background-color: #fff;
     height: 55px;
 }
+a:visited{
+    color: black;
+}
 
 .line-breaker {
     white-space: pre-line;
