--- a/src/app/pages/member/sub-account/sub-account.page.html
+++ b/src/app/pages/member/sub-account/sub-account.page.html
@@ -16,8 +16,8 @@
   <ion-list lines="full">
     <ion-item detail button *ngFor="let item of items" (click)="detail(item)">
 
-      <ion-label>{{item.ObjectNo}}</ion-label>
-      <ion-note slot="end">{{item.ObjectName}}</ion-note>
+      <ion-label>{{item.ContactName}}</ion-label>
+      <ion-note slot="end">{{item.MobilePhone}}</ion-note>
     </ion-item>
 
   </ion-list>
