--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -17,7 +17,7 @@
 
     <ion-item>
       <ion-label stacked color="dark">用户名</ion-label>
-      <ion-input type="text" formControlName="username" value="" placeholder="请输入用户名或者手机号码"></ion-input>
+      <ion-input type="text" formControlName="username" value="" placeholder="请输入手机号码"></ion-input>
 
     </ion-item>
     <ion-item>
