申请退货完善

--- a/src/app/pages/member/return-apply/return-apply.page.html
+++ b/src/app/pages/member/return-apply/return-apply.page.html
@@ -44,7 +44,7 @@
         <ion-input type="text" formControlName="Remark"></ion-input>
       </ion-item>
     </ion-list>
-    <ion-button #btnSubmit expand="full" type="submit" [disabled]="!applyForm.valid">提交</ion-button>
+    <ion-button #btnSubmit expand="full" type="submit">提交</ion-button>
   </form>
 </ion-content>
 
