--- a/src/app/pages/member/delivery-record/delivery-record.page.scss
+++ b/src/app/pages/member/delivery-record/delivery-record.page.scss
@@ -28,3 +28,8 @@ ion-toolbar{
     border-bottom: none !important;
 
 }
+.waitReturnCount{
+    position: absolute;
+    z-index: 999;
+    right: -10px;
+}
