--- a/src/app/pages/member/calculation-list/calculation-list.page.html
+++ b/src/app/pages/member/calculation-list/calculation-list.page.html
@@ -8,8 +8,13 @@
 </ion-header>
 
 <ion-content>
-  <ion-list >
-    <ion-item detail *ngFor="let item of calculateResultList" (click)="detail(item)">
+  <ion-segment [(ngModel)]="currentTabIndex">
+    <ion-segment-button *ngFor="let item of tabsData;let i=index" value={{i}}>
+      <ion-label>{{item.PriceType}}</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+  <ion-list class="result_list" >
+    <ion-item detail *ngFor="let item of tabsData[currentTabIndex].PriceList" (click)="detail(item)">
       <ion-label> 
           <h2>{{item.PriceNo}}</h2>
           <p>{{item.ShortPriceName}}</ion-label>
