配合服务器端报价计算API修改

--- a/src/app/pages/member/calculation-detail/calculation-detail.page.html
+++ b/src/app/pages/member/calculation-detail/calculation-detail.page.html
@@ -29,13 +29,13 @@
     <div *ngSwitchCase="1">
       <ion-list>
         <ion-item>
-          <ion-label>报价编码</ion-label>
-          <ion-input class="ion-text-right" readonly="true" value="{{data.PriceNo}}"></ion-input>
+          <ion-label>报价代码</ion-label>
+          <ion-input class="ion-text-right" readonly="true" value="{{data.PriceCode}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>报价名称</ion-label>
 
-          <ion-input class="ion-text-right" readonly="true" value="{{data.ShortPriceName}}"></ion-input>
+          <ion-input class="ion-text-right" readonly="true" value="{{data.PriceName}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>运输方式</ion-label>
